# zbook_backend/doc/swagger/service_zbook_markdown.swagger.json
@@ -217,9 +217,11 @@
     "pbGetMarkdownImageRequest": {
       "type": "object",
       "properties": {
-        "repoId": {
-          "type": "string",
-          "format": "int64"
+        "username": {
+          "type": "string"
+        },
+        "repoName": {
+          "type": "string"
         },
         "filePath": {
           "type": "string"
